force-app/main/default/objects/Event_Sponsor_Contact_Role__c/Event_Sponsor_Contact_Role__c.object-meta.xml
<CustomObject>
    <description
  >This is a contact role that a contact might take on for an event sponsorship. (primarily used by EM and Custom Events)</description>
    <label>Event Sponsor Contact Role</label>
    <nameField>
        <displayFormat>SponsorRole-{00000}</displayFormat>
        <label>Event Sponsor Contact Role</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sponsor Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>