force-app/main/default/objects/Event_Sponsor_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description
  >The contact that will be responsible for the execution of the specified duties related to the sponsorship.</description>
    <inlineHelpText
  >The contact that will be responsible for the execution of the specified duties related to the sponsorship.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Sponsor Contact Roles</relationshipLabel>
    <relationshipName>Event_Sponsor_Contact_Roles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>