force-app/main/default/objects/Event_Sponsor_Contact_Role__c/fields/Event_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsorship__c</fullName>
    <description
  >The sponsorship that this contact role is related to.</description>
    <inlineHelpText
  >The sponsorship that this contact role is related to.</inlineHelpText>
    <label>Event Sponsorship</label>
    <referenceTo>Event_Sponsorship__c</referenceTo>
    <relationshipLabel>Event Sponsor Contact Roles</relationshipLabel>
    <relationshipName>Event_Sponsor_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>