force-app/main/default/objects/Event_Sponsor_Contact_Role__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Designates whether a contact is the primary contact for the sponsorship or not.</description>
    <inlineHelpText
  >Designates whether a contact is the primary contact for the sponsorship or not.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>