force-app/main/default/objects/Event_Sponsor_Contact_Role__c/fields/Role_s__c.field-meta.xml
<CustomField>
    <fullName>Role_s__c</fullName>
    <description
  >These are the various roles that a contact might have in interacting with the Events team.</description>
    <inlineHelpText
  >These are the various roles that a contact might have in interacting with the Events team.</inlineHelpText>
    <label>Role(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Logo and Profile</fullName>
            </value>
            <value>
                <fullName>Ad Board Contact</fullName>
            </value>
            <value>
                <fullName>Speaker Contact</fullName>
            </value>
            <value>
                <fullName>Carbon Copy (CC)</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>